Validation form done

--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
             </div>
             <div class="contact-2">
               <h3>Enter your information bellow</h3>
-                <form action="">
+                <form name="myForm" action="" onsubmit="return validateForm()" method="post" >
                     <input type="text" placeholder="First name" required>
                     <input type="text" placeholder="Last name" required>
                     <input type="email" placeholder="Enter your email adress" required>
@@ -84,5 +84,5 @@
           </div>
       </section>
    </footer>
-  
+  <script src="js/about.js"></script>
   </body>
