Changes made with name

--- a/contact.html
+++ b/contact.html
@@ -60,11 +60,11 @@
             <div class="contact-2">
               <h3>Enter your information bellow</h3>
                 <form name="myForm" action="" onsubmit="return validateForm()" method="post" >
-                    <input type="text" placeholder="First name" required>
-                    <input type="text" placeholder="Last name" required>
-                    <input type="email" placeholder="Enter your email adress" required>
-                    <input type="text" placeholder="Enter your subject" required>
-                    <textarea rows="10" placeholder="Message" required></textarea>
+                    <input type="text" placeholder="First name" >
+                    <input type="text" placeholder="Last name" >
+                    <input type="email" placeholder="Enter your email adress">
+                    <input type="text" placeholder="Enter your subject">
+                    <textarea rows="10" placeholder="Message"></textarea>
                     <button type="submit" class="button">Send message</button>
                 </form>
             </div>
