--- a/contact.html
+++ b/contact.html
@@ -59,12 +59,12 @@
             </div>
             <div class="contact-2">
               <h3>Enter your information bellow</h3>
-                <form name="myForm" action="" onsubmit="return validateForm()" method="post" >
-                    <input type="text" placeholder="First name" >
-                    <input type="text" placeholder="Last name" >
-                    <input type="email" placeholder="Enter your email adress">
-                    <input type="text" placeholder="Enter your subject">
-                    <textarea rows="10" placeholder="Message"></textarea>
+                <form name="myForm" action="" onsubmit="return validateForm(event)" method="post" >
+                    <input type="text" name="fname" placeholder="Enter your first name" required>
+                    <input type="text" name="lname" placeholder="Enter your last name">
+                    <input type="email" name= "mail" placeholder="Enter your email adress">
+                    <input type="text" name="subject" placeholder="Enter your subject">
+                    <textarea rows="10" name="message" placeholder="Message"></textarea>
                     <button type="submit" class="button">Send message</button>
                 </form>
             </div>
