--- a/landing-page.html
+++ b/landing-page.html
@@ -1,74 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Bookstore</title>
-    <link rel="stylesheet" href="css/style-land.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
- 
-  </head>
-  <body>
-    <article>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Bookstore</title>
+  <link rel="stylesheet" href="css/style-land.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+  <article>
     <header>
       <nav>
-          <div class="links">
-              <ul>
-                  <li><a href="bookstore.html">Home</a></li>
-                  <li><a href="about.html">About us</a></li>
-                  <li><a href="explore.html">Explore books</a></li>
-                  <li><a href="contact.html">Contact page</a></li>
-              </ul>
-          </div>
+        <div class="links">
+          <ul>
+            <li><a href="bookstore.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="explore.html">Explore books</a></li>
+            <li><a href="contact.html">Contact page</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
-  <div class="content">
-    <div class="text-box">
-        <h2> It's not just a book,<br> It's an entire new experience you get to know. </h2>
-        <p>Reading is no fun at all when you can't find the right book for your taste, but with <span>Bookly</span><br>
-           we can rapidly sort out your pereferences to give you the best recomandations!</p>
-           <a href="bookstore.html" class="button">Click to get started</a>
-    </div>
-  </div>
+    <div class="content">
+      <div class="col-left">
+        <div class="text-box">
+          <h2> It's not just a book,<br> It's an entire new experience you get to know. </h2>
+          <p>Reading is no fun at all when you can't find the right book for your taste, but with
+            <span>Bookly</span><br>
+            we can rapidly sort out your pereferences to give you the best recomandations!
+          </p>
+          <a href="bookstore.html" class="button">Click to get started</a>
+        </div>
+      </div>
 
-  
-  <div class="slideshow-container">
-    <div class="mySlides">
-      <img src="img/romance.jpg">
-      <div class="text">"Lorem ipsum dolor sit amet,
-         consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-         et dolore magna aliqua."</div>
+
+      <div class="col-right">
+        <div class="slideshow-container">
+          <div class="mySlides">
+            <img src="img/romance.jpg">
+            <div class="text">"Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+              et dolore magna aliqua."</div>
+          </div>
+          <div class="mySlides">
+            <img src="img/psy.jpeg">
+            <div class="text">"Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+              et dolore magna aliqua."</div>
+          </div>
+          <div class="mySlides">
+            <img src="img/act3.jpg">
+            <div class="text">"Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+              et dolore magna aliqua."</div>
+          </div>
+          <div class="mySlides">
+            <img src="img/rom3.jpg">
+            <div class="text">"Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+              et dolore magna aliqua."</div>
+          </div>
+          <div class="mySlides">
+            <img src="img/act2.jpg">
+            <div class="text">"Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+              et dolore magna aliqua."</div>
+          </div>
+
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+        </div>
+      </div>
     </div>
-    <div class="mySlides">
-      <img src="img/psy.jpeg">
-      <div class="text">"Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-        et dolore magna aliqua."</div>
-    </div><div class="mySlides">
-      <img src="img/act3.jpg">
-      <div class="text">"Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-        et dolore magna aliqua."</div>
-    </div><div class="mySlides">
-      <img src="img/rom3.jpg">
-      <div class="text">"Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-        et dolore magna aliqua."</div>
-    </div><div class="mySlides">
-      <img src="img/act2.jpg">
-      <div class="text">"Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore 
-        et dolore magna aliqua."</div>
-    </div>
- 
-        <!-- Next and previous buttons -->
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    
-  </div>
-</article>
- 
+  </article>
+
   <script src="js/main.js"></script>
-  </body>
+</body>
