--- a/landing-page.html
+++ b/landing-page.html
@@ -18,7 +18,7 @@
       <nav>
         <div class="links">
           <ul>
-            <li><a href="bookstore.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="explore.html">Explore books</a></li>
             <li><a href="contact.html">Contact page</a></li>
