landung-page added to index

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <h1> Bookly</h1>
         <p> Come to check our bookstore, tons of good books available!</p>
-        <a href="explore.html" class="button">Click to get started</a>
+        <a href="landing-page.html" class="button">Click to get started</a>
         
       </div>
     </header>
