--- a/landing-page.html
+++ b/landing-page.html
@@ -31,10 +31,10 @@
         <div class="text-box">
           <h2> It's not just a book,<br> It's an entire new experience you get to know. </h2>
           <p>Reading is no fun at all when you can't find the right book for your taste, but with
-            <span>Bookly</span><br>
+            <span>Bookly</span>
             we can rapidly sort out your pereferences to give you the best recomandations!
           </p>
-          <a href="bookstore.html" class="button">Click to get started</a>
+          <a href="index.html" class="button">Click to get started</a>
         </div>
       </div>
 
